--- a/README
+++ b/README
@@ -28,7 +28,7 @@ A page describes the use of the phpPgAdmin plugin. It is also relevant for Emaj_
 
 4- Installation
 
-TO BE DONE
+Please look at the INSTALL file.
 
 
 5- Support
